<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F9CC7"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#2F9CC7">

        <Button
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search"
            android:background="@drawable/butto"
            android:textColor="#2B99DA"
            android:textSize="15dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/discoverable1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/butto"
            android:text="@string/discoverable1"
            android:textColor="#2B99DA"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/sou"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/RecieveText"
            android:textColor="#A5BFD6"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/incount"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/sou"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="8dp"
            android:text="@string/top5"
            android:textColor="#A5BFD6"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/outcount"
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/sou"
            android:textColor="#000000" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="3dp"
        android:background="#6DAAC9">

        <TextView
            android:id="@+id/recieve_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="12dp"
            android:hint="@string/in"
            android:scrollbars="vertical"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="3dp"
        android:gravity="center">


        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Clear"
            android:background="@drawable/butto"
            android:textColor="#2B99DA"
            android:textSize="15dp"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Recognize"
            android:background="@drawable/butto"
            android:textColor="#2B99DA"
            android:textSize="15dp"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Save"
            android:background="@drawable/butto"
            android:textColor="#2B99DA"
            android:textSize="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="1dp"
        android:background="#6DAAC9">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingClass" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/mai"
        android:fitsSystemWindows="false"
        android:gravity="center"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/in16"
            style="@style/checkboxsy"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/butto"
            android:checked="true"
            android:text="16进制显示"
            android:textColor="#000000"
            android:textSize="15dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/out16"
            style="@style/checkboxsy"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/butto"
            android:checked="true"
            android:text="@string/out16"
            android:textColor="#000000"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>